--- a/RESCUE/css/styles.css
+++ b/RESCUE/css/styles.css
@@ -20,15 +20,21 @@ img {
   display: block;
 }
 
+h2 {
+  text-align: center;
+  font-family: "Lora", serif;
+}
+
 /* Style rules for mobile viewport */
 
-
-/* Style rules to show mobile class and hide tab-desk class */
-.mobile{
-  display: block;
-}
-.tab-desk{
-  visibility: hidden;
+@media (max-width: 768px) {
+  /* Style rules to show mobile class and hide tab-desk class */
+  .mobile, .mobile-tablet{
+    display: block;
+  }
+  .tab-desk, .desktop{
+    visibility: hidden;
+  }
 }
 
 
@@ -131,7 +137,7 @@ figcaption {
   margin-left: 10%;
 }
 
-#contact{
+#contact, #form h2{
   align-items: center;
 }
 
@@ -179,6 +185,34 @@ main ul {
 }
 #contact {
   align: center;
+}
+
+/* Style rules for form elements */
+fieldset, input, textarea {
+    margin-bottom: 2%;
+}
+
+fieldset legend {
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
+label {
+    display: block;
+    padding-top: 2%;
+}
+
+form #submit {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: 2%;
+    background-color: #78593a;
+    color: #f6eee4;
+    font-size: 1.25em;
+    border-radius: 10px;
 }
 
 /* Style rules for footer content */
@@ -229,12 +263,27 @@ footer a {
   aside {
     grid-column: 1 / span 2;
   }
+
+  /* Desktop Viewport: Style rules for form elements */
+  form {
+    width: auto;
+  }
+
+  .form-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+  }
+
+  .btn {
+    grid-column: 1 / span 2;
+  }
 }
 
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1000px) {
 
-  /* Desktop Viewport: Style rules for nav area */
+  /* Desktop Viewport: Show desktop class, hide mobile-tablet class */
   nav li {
     font-size: 1.5em;
   }
@@ -266,6 +315,43 @@ footer a {
     grid-column: 1 / span 3;
     font-size: 2em;
   }
+
+  .mobile-tablet {
+    display: none;
+  }
+
+  /* Style rules for table */
+  table {
+    border: 1px solid #2a1f14;
+    border-collapse: collapse;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: "Lora", serif;
+  }
+
+  caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 1%;
+  }
+
+  th, td {
+    border: 1px solid #2a1f14;
+    padding: 1%;
+  }
+
+  th {
+    background-color: #2a1f14;
+    color: #fff;
+    font-size: 1.15em;
+  }
+
+  tr:nth-child(odd) {
+      background-color: #deccba;
+  }
+
 }
 
 /* Media Query for Large Desktop Viewports */
