--- a/MUSIC/css/styles.css
+++ b/MUSIC/css/styles.css
@@ -11,6 +11,10 @@ body, header, nav, main, footer, img, h1, ul, section, aside, figure, figcaption
   border: 0;
 }
 
+h2 {
+  text-align: center;
+}
+
 /* Style rule for images */
 img {
   max-width: 100%;
@@ -45,6 +49,7 @@ box-sizing: border-box;
         margin: 2% auto;
         border: 8px solid #373684;
     }
+
     figcaption {
         position: absolute;
         bottom: 0;
@@ -56,6 +61,31 @@ box-sizing: border-box;
         font-family: Verdana, Arial, sans-serif;
         font-size: 1.5em;
         font-weight: bold;
+    }
+
+    fieldset, input {
+        margin-bottom: 2%;
+    }
+
+    fieldset legend {
+        font-weight: bold;
+        font-size: 1.25em;
+    }
+
+    label {
+        display: block;
+        padding-top: 3%;
+    }
+
+    form #submit {
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        padding: 3%;
+        background-color: #b7b7e1;
+        font-size: 1em;
     }
 }
 
@@ -126,7 +156,7 @@ main p {
 .round{
   border-radius: 8px;
 }
-#contact {
+#contact, #rental h2 {
    text-align: center;
 }
 .tel-link {
@@ -153,6 +183,35 @@ main p {
    width: 95%;
    height: 50%;
 }
+
+/* Style rules for table */
+table {
+  border: 1px solid #373684;
+  border-collapse: collapse;
+  margin: 0 auto;
+  width: 100%;
+}
+caption {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 1%;
+}
+th, td {
+  border: 1px solid #373684;
+  padding: 2%;
+}
+th {
+  background-color: #373684;
+  color: #fff;
+  font-size: 1.15em;
+}
+tr:nth-child(odd) {
+  background-color: #b7b7e1;
+}
+
+/* Style rules for form elements */
+
+
 
 /* Style rules for footer content */
 footer {
@@ -208,6 +267,15 @@ footer a {
   .map {
     width: 500px;
     height: 450px;
+  }
+
+  /* Tablet Viewport: Style rule for form element */
+  form {
+    width: 70%;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -286,6 +354,48 @@ footer a {
     margin-left: 2%;
     margin-right: 2%;
   }
+
+  /* Desktop Viewport: Style rules for table */
+  table {
+    width: 70%;
+  }
+
+  /* Desktop Viewport: Style rules for form elements */
+  .form-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+  }
+
+  .btn {
+    grid-column: 1 / span 2;
+  }
+
+  fieldset, input {
+      margin-bottom: 2%;
+  }
+
+  fieldset legend {
+      font-weight: bold;
+      font-size: 1.25em;
+  }
+
+  label {
+      display: block;
+      padding-top: 3%;
+  }
+
+  form #submit {
+      margin-top: 0;
+      margin-bottom: 0;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      padding: 3%;
+      background-color: #b7b7e1;
+      font-size: 1em;
+  }
+
 }
 
 /* Media Query for Print */
